deploy/k8s/overlays/prod-basta-2022/deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  template:
    spec:
      containers:
      - name: lottoweb
