deploy/k8s/overlays/prod-basta-2022/ingress-lotto-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-lotto-service
  labels:
    app: lotto-service
spec:
  ingressClassName: nginx
  rules:
    - host: api.lotto.dlindemann.xyz
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: lotto-service
                port:
                  number: 8080
  # # This section is only required if TLS is to be enabled for the Ingress
  # tls:
  #   - hosts:
  #     - www.example.com
  #     secretName: example-tls
